--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,8 @@
   "type_dreamy_devops": "Dreamy DevOps Engineer",
   "type_atlassian_administrator": "Atlassian administrator",
   "type_computer_system_engineer": "Computer system Engineer",
-  "type_newbie_web_developer": "Newbie Web developer",
+  "type_newbie_web_developer": "Sometimes Web developer",
+  "type_ethnical_hacker": "I have an Ethical Hacker certificate from Cisco",
   "about_title": "Know Who I'M",
   "professional_skillset": "Professional Skillset",
   "tools_i_use": "Tools I Use",
