--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,6 +15,7 @@
   "type_atlassian_administrator": "Администратор Atlassian",
   "type_computer_system_engineer": "Инженер компьютерных систем",
   "type_newbie_web_developer": "Новичок веб-разработчик",
+  "type_ethnical_hacker": "Получил сертификат Ethical hacker от Cisco",
   "about_title": "Узнайте, кто я",
   "professional_skillset": "Профессиональные навыки",
   "tools_i_use": "Используемые инструменты",
