--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -4,22 +4,23 @@
   "navbar_projects": "Проекти",
   "navbar_resume": "Резюме",
   "home_hi_there": "Привіт!",
-  "home_im": "Моє ім'я",
+  "home_im": "Я - ",
   "home_name": "Олексій Кошеленко",
-  "home_introduce_myself": "ДОЗВОЛЬТЕ МЕНІ",
-  "home_introduce": "ПРЕДСТАВИТИСЯ",
+  "home_introduce_myself": "ТРОШКИ ІНФОРМАЦІІ ПРО",
+  "home_introduce": "МЕНЕ",
   "home_about_description1": "У світі DevOps я прагну до високого професіоналізму та успішно вирішую завдання в різноманітних технічних середовищах.",
   "home_about_description2": "Моя експертиза включає використання Docker та Kubernetes для розробки надійних рішень, і я вміло використовую Jenkins для автоматизації та оптимізації системних процесів.",
   "home_about_description3": "Я зосереджений на створенні та оптимізації масштабованих хмарних рішень на платформах, таких як GCP та AWS, для досягнення максимальної ефективності.",
   "home_about_description4": "Дотримуючись принципів, я прагну покращувати процеси управління проектами та сприяти неперервному інноваційному розвитку інфраструктури системи.",
   "home_find_me_on": "ЗНАЙДІТЬ МЕНЕ НА",
   "home_connect_with_me": "Не соромтеся зв'язатися зі мною",
-  "type_certified_professional": "Сертифікований професіонал з облачної DevOps-інженерії",
-  "type_linux_system_admin": "Адміністратор Linux-систем",
+  "type_certified_professional": "Сертифікований професіонал з хмарних рішень за напрямом DevOps",
+  "type_linux_system_admin": "Адміністратор Linux та Windows систем",
   "type_dreamy_devops": "Мрійливий DevOps-інженер",
   "type_atlassian_administrator": "Адміністратор Atlassian",
-  "type_computer_system_engineer": "Інженер комп'ютерних систем",
-  "type_newbie_web_developer": "Новачок веб-розробник",
+  "type_computer_system_engineer": "Інженер з комп'ютерних систем",
+  "type_newbie_web_developer": "Трошки веб-розробник",
+  "type_ethnical_hacker": "Маю сертифікат Ethical hacker від Cisco",
   "about_title": "Дізнайтеся, хто я",
   "professional_skillset": "Професійні навички",
   "tools_i_use": "Інструменти, які я використовую",
@@ -27,7 +28,7 @@
   "about_card_from": "я родом з ",
   "about_card_country": "України",
   "about_card_currently_looking": "На даний момент шукаю роботу мрії.",
-  "about_card_certification": "Я отримав статус Сертифікованого професіонала з облачної DevOps-інженерії від Google Cloud",
+  "about_card_certification": "Я отримав статус Сертифікованого професіонала з DevOps-інженерії від Google Cloud",
   "about_card_activities_intro": "Крім самоосвіти, я також залучаюся до різних інших активностей!",
   "about_card_activity_sport": "Спорт",
   "about_card_activity_tv": "Перегляд телешоу",
