remove some  coments from code

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
   "navbar_resume": "Resume",
   "home_hi_there": "Hi There!",
   "home_im": "I'M",
-  "home_name": "Alex Koshelenko",
+  "home_name": "Alex",
   "home_introduce_myself": "LET ME ",
   "home_introduce": "INTRODUCE MYSELF",
   "home_about_description1": "In the world of DevOps, I strive for a high level of professionalism, effectively tackling challenges across diverse technical environments.",
