--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,7 +4,8 @@
   "navbar_projects": "Проекты",
   "navbar_resume": "Резюме",
   "home_hi_there": "Привет!",
-  "home_im_name": "Я - Алекс Кошеленко",
+  "home_im": "Я - ",
+  "home_name": "Алексей",
   "home_introduce_myself": "Позвольте мне представиться",
   "home_about_description": "В мире DevOps я стремлюсь к высокому профессионализму и успешно решаю задачи в разнообразных технических средах. Моя экспертиза включает использование Docker и Kubernetes для разработки надежных решений, а также умелое использование Jenkins для автоматизации и оптимизации процессов системы. Я сосредоточен на создании и оптимизации масштабируемых облачных решений на платформах, таких как GCP и AWS, для достижения максимальной эффективности. Придерживаясь принципов Agile, я стремлюсь улучшать процессы управления проектами и содействовать непрерывному инновационному развитию в инфраструктуре системы.",
   "home_find_me_on": "НАЙДИТЕ МЕНЯ НА",
