--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -5,7 +5,7 @@
   "navbar_resume": "Резюме",
   "home_hi_there": "Привіт!",
   "home_im": "Я - ",
-  "home_name": "Олексій Кошеленко",
+  "home_name": "Олексій",
   "home_introduce_myself": "ТРОШКИ ІНФОРМАЦІІ ПРО",
   "home_introduce": "МЕНЕ",
   "home_about_description1": "У світі DevOps я прагну до високого професіоналізму та успішно вирішую завдання в різноманітних технічних середовищах.",
