add beges and certificates

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,6 +34,8 @@
   "about_card_activity_tv": "Watching TV shows",
   "about_card_activity_reading": "Reading books",
   "about_card_quote": "\"DevOpsDive: Engineering Tomorrow's Solutions, Today\" ",
+  "bages_and_certificates": "Bages and Certificates",
+  "click_to_verify": "click to verify",
   "github_days_i_code": "Days I",
   "github_code": "Code",
   "github_web_hobby": "Web its my hobby",
