--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,6 +29,8 @@
   "about_card_activity_tv": "Просмотр телешоу",
   "about_card_activity_reading": "Чтение книг",
   "about_card_quote": "\"DevOpsDive: Инжиниринг завтрашних решений сегодня\"",
+  "bages_and_certificates": "Бейджи и Сертификаты",
+  "click_to_verify": "нажми для верификации",
   "github_days_i_code": "Дни, когда я кодирую",
   "github_code": "Код",
   "github_web_hobby": "Веб - мое хобби",
