--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -34,6 +34,8 @@
   "about_card_activity_tv": "Перегляд телешоу",
   "about_card_activity_reading": "Читання книг",
   "about_card_quote": "\"DevOpsDive: Інженерія рішень завтрашнього дня, вже сьогодні!\"",
+  "bages_and_certificates": "Мої Бейджи та Сертифікати",
+  "click_to_verify": "натисни для верифікації",
   "github_days_i_code": "Дні, коли я трошки пишу",
   "github_code": "код",
   "github_web_hobby": "Веб - моє хобі",
