edit Objective in AboutCard

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,7 +27,7 @@
   "about_card_intro": "Hi Everyone, I am ",
   "about_card_from": "from ",
   "about_card_country": "Ukraine",
-  "about_card_currently_looking": "I am currently looking for a Dream job.",
+  "about_card_currently_looking": "Evolving in the field of DevOps and Site Reliability Engineering, I progressively advance towards my dream.",
   "about_card_certification": "I successfully completed all the requirements to be recognized as a Google Cloud Certified Professional Cloud DevOps Engineer.",
   "about_card_activities_intro": "Apart from self-learning, some other activities that I love to do!",
   "about_card_activity_sport": "Sport activities",
