--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,7 +22,7 @@
   "tools_i_use": "Используемые инструменты",
   "about_card_intro": "Привет всем, я ",
   "about_card_from": "из ",
-  "about_card_currently_looking": "В настоящее время ищу мечтаемую работу.",
+  "about_card_currently_looking": "Развиваясь в области DevOps и Site Reliability Engineering, я шаг за шагом продвигаюсь к своей мечте.",
   "about_card_certification": "Успешно выполнил все требования для получения статуса Сертифицированного профессионала по облачной DevOps-инженерии от Google Cloud.",
   "about_card_activities_intro": "Помимо самообразования, я также люблю заниматься другими активностями!",
   "about_card_activity_sport": "Занятия спортом",
@@ -31,7 +31,7 @@
   "about_card_quote": "\"DevOpsDive: Инжиниринг завтрашних решений сегодня\"",
   "bages_and_certificates": "Бейджи и Сертификаты",
   "click_to_verify": "нажми для верификации",
-  "github_days_i_code": "Дни, когда я кодирую",
+  "github_days_i_code": "Дни, когда я пишу",
   "github_code": "Код",
   "github_web_hobby": "Веб - мое хобби",
   "projects_my_recent_works": "Мои последние работы",
