--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -27,7 +27,7 @@
   "about_card_intro": "Привіт усім, мене звати",
   "about_card_from": "я родом з ",
   "about_card_country": "України",
-  "about_card_currently_looking": "На даний момент шукаю роботу мрії.",
+  "about_card_currently_looking": "Розвиваючись у галузі DevOps та Site Reliability Engineering, я крок за кроком просуваюся до своєї мрії.",
   "about_card_certification": "Я отримав статус Сертифікованого професіонала з DevOps-інженерії від Google Cloud",
   "about_card_activities_intro": "Крім самоосвіти, я також залучаюся до різних інших активностей!",
   "about_card_activity_sport": "Спорт",
