update values of locales. Update text

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,27 +8,27 @@
   "home_name": "Alex",
   "home_introduce_myself": "LET ME ",
   "home_introduce": "INTRODUCE MYSELF",
-  "home_about_description1": "In the world of DevOps, I strive for a high level of professionalism, effectively tackling challenges across diverse technical environments.",
-  "home_about_description2": "My expertise includes leveraging Docker and Kubernetes for developing robust solutions, and I skillfully use Jenkins for automating and streamlining system processes.",
-  "home_about_description3": "I'm focused on crafting and optimizing scalable cloud solutions on platforms like GCP and AWS to achieve peak efficiency.",
-  "home_about_description4": "Committed to Agile principles, I aim to enhance project management processes and foster continuous innovation in system infrastructure.",
-  "home_find_me_on": "FIND ME ON",
-  "home_connect_with_me": "Feel free to connect with me",
-  "type_certified_professional": "Certified Professional Cloud DevOps Engineer",
-  "type_linux_system_admin": "Linux system administrator",
-  "type_dreamy_devops": "Dreamy DevOps Engineer",
-  "type_atlassian_administrator": "Atlassian administrator",
-  "type_computer_system_engineer": "Computer system Engineer",
-  "type_newbie_web_developer": "Sometimes Web developer",
-  "type_ethnical_hacker": "I have an Ethical Hacker certificate from Cisco",
-  "about_title": "Know Who I'M",
+  "home_about_description1": "As a DevOps engineer, I specialize in designing scalable solutions and optimizing technical processes across complex infrastructural environments.",
+  "home_about_description2": "My expertise encompasses building highly available solutions using Docker and Kubernetes, while implementing efficient automated workflows through Jenkins and modern CI/CD practices.",
+  "home_about_description3": "I excel in architecting and optimizing cloud solutions across GCP, Azure, and AWS, achieving maximum performance with optimal resource utilization.",
+  "home_about_description4": "Following Agile principles, I drive continuous innovation in project management and infrastructure development, ensuring constant process improvement.",
+  "home_find_me_on": "CONNECT WITH ME",
+  "home_connect_with_me": "Let's collaborate on innovative solutions",
+  "type_certified_professional": "Multi-cloud Systems Engineer",
+  "type_linux_system_admin": "Google Cloud Professional DevOps Engineer",
+  "type_dreamy_devops": "Certified in Amazon Web Services",
+  "type_atlassian_administrator": "Certified in Microsoft Azure",
+  "type_computer_system_engineer": "Top 1000 Worldwide in Google Skill Boost Challenge (2024)",
+  "type_newbie_web_developer": "Driven by complex challenges, I innovate and deliver impactful DevOps solutions that transform business operations.",
+  "type_ethnical_hacker": "Certified Ethical Hacker with expertise in cybersecurity fundamentals and advanced security practices, committed to continuous growth in security and infrastructure protection",
+  "about_title": "My Professional Journey",
   "professional_skillset": "Professional Skillset",
-  "tools_i_use": "Tools I Use",
+  "tools_i_use": "Tools I use",
   "about_card_intro": "Hi Everyone, I am ",
-  "about_card_from": "from ",
+  "about_card_from": "IT Engineer from ",
   "about_card_country": "Ukraine",
-  "about_card_currently_looking": "Evolving in the field of DevOps and Site Reliability Engineering, I progressively advance towards my dream.",
-  "about_card_certification": "I successfully completed all the requirements to be recognized as a Google Cloud Certified Professional Cloud DevOps Engineer.",
+  "about_card_currently_looking": "Advancing in Systems Engineering, DevOps, and Site Reliability Engineering, I continuously expand my technical horizons and expertise.",
+  "about_card_certification": "Certified as a Google Cloud Professional DevOps Engineer, AWS Cloud Practitioner, and Microsoft Azure Administrator, demonstrating comprehensive cloud expertise.",
   "about_card_activities_intro": "Apart from self-learning, some other activities that I love to do!",
   "about_card_activity_sport": "Sport activities",
   "about_card_activity_tv": "Watching TV shows",
@@ -39,7 +39,7 @@
   "github_days_i_code": "Days I",
   "github_code": "Code",
   "github_web_hobby": "Web its my hobby",
-  "projects_my_recent_works": "My Recent Works",
+  "projects_my_recent_works": "Featured Projects",
   "projects_description": "Here are a few projects I've worked on recently.",
   "project_jira_title": "Jira Deployment and Automation",
   "project_jira_description": "Deployed Jira for project management, customizing it with automated scripts for task tracking, sprint planning, and team workflows, thus boosting productivity and aligning with agile methods.",
