--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,8 +6,12 @@
   "home_hi_there": "Привет!",
   "home_im": "Я - ",
   "home_name": "Алексей",
-  "home_introduce_myself": "Позвольте мне представиться",
-  "home_about_description": "В мире DevOps я стремлюсь к высокому профессионализму и успешно решаю задачи в разнообразных технических средах. Моя экспертиза включает использование Docker и Kubernetes для разработки надежных решений, а также умелое использование Jenkins для автоматизации и оптимизации процессов системы. Я сосредоточен на создании и оптимизации масштабируемых облачных решений на платформах, таких как GCP и AWS, для достижения максимальной эффективности. Придерживаясь принципов Agile, я стремлюсь улучшать процессы управления проектами и содействовать непрерывному инновационному развитию в инфраструктуре системы.",
+  "home_introduce_myself": "Рад вас",
+  "home_introduce": "видеть тут",
+  "home_about_description1": "В мире DevOps я стремлюсь к высокому профессионализму и успешно решаю задачи в разнообразных технических средах.",
+  "home_about_description2": "Моя экспертиза включает использование Docker и Kubernetes для разработки надежных решений, а также умелое использование Jenkins для автоматизации и оптимизации процессов системы.",
+  "home_about_description3": "Я сосредоточен на создании и оптимизации масштабируемых облачных решений на платформах, таких как GCP и AWS, для достижения максимальной эффективности.",
+  "home_about_description4": "Придерживаясь принципов Agile, я стремлюсь улучшать процессы управления проектами и содействовать непрерывному инновационному развитию в инфраструктуре системы.",
   "home_find_me_on": "НАЙДИТЕ МЕНЯ НА",
   "home_connect_with_me": "Не стесняйтесь связаться со мной",
   "type_certified_professional": "Сертифицированный профессионал по облачной DevOps-инженерии",
@@ -22,6 +26,7 @@
   "tools_i_use": "Используемые инструменты",
   "about_card_intro": "Привет всем, я ",
   "about_card_from": "из ",
+  "about_card_country": "Украины",
   "about_card_currently_looking": "Развиваясь в области DevOps и Site Reliability Engineering, я шаг за шагом продвигаюсь к своей мечте.",
   "about_card_certification": "Успешно выполнил все требования для получения статуса Сертифицированного профессионала по облачной DevOps-инженерии от Google Cloud.",
   "about_card_activities_intro": "Помимо самообразования, я также люблю заниматься другими активностями!",
@@ -64,5 +69,29 @@
   "select_en_resume": "Резюме на английском языке",
   "select_ua_resume": "Резюме на украинском языке",
   "footer_copywright_1": "Инжиниринг решений завтрашнего дня, сегодня",
-  "footer_copywright_2": "Авторские права © {{year}} DevOpsDive"
+  "footer_copywright_2": "Авторские права © {{year}} DevOpsDive",
+  "all": "Все",
+  "type_project": "Проект",
+  "type_task": "Задача",
+  "category_cloud": "Облачные сервисы",
+  "category_cicd": "CI/CD и контейнеры",
+  "category_monitoring": "Мониторинг и логирование",
+  "category_iac": "Инфраструктура как код",
+  "category_security": "Безопасность",
+  "category_automation": "Автоматизация",
+  "category_infrastructure": "Инфраструктура",
+  "active_filters": "Активные фильтры",
+  "clear_all": "Очистить все",
+  "showing_results": "Показано {{count}} результатов",
+  "no_results": "Проекты не найдены",
+  "try_different_filters": "Попробуйте другие фильтры",
+  "reset_all_filters": "Сбросить все фильтры",
+  "task_kubernetes_title": "Развертывание Kubernetes",
+  "task_kubernetes_description": "Настроил кластер Kubernetes и развернул микросервисы с автоматическим масштабированием и мониторингом.",
+  "task_aws_title": "Настройка инфраструктуры AWS",
+  "task_aws_description": "Внедрил инфраструктуру AWS используя Terraform, включая настройку VPC, EC2 и RDS.",
+  "task_elk_title": "Внедрение ELK Stack",
+  "task_elk_description": "Внедрил ELK stack для централизованного логирования и мониторинга приложений.",
+  "task_cloud_migration_title": "Проект миграции в облако",
+  "task_cloud_migration_description": "Выполнил миграцию локальных приложений в облачную платформу используя инфраструктуру как код."
 }
