--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -69,5 +69,30 @@
   "select_en_resume": "Англійська версія резюме",
   "select_ua_resume": "Українська версія резюме",
   "footer_copywright_1": "Інженерія рішень завтрашнього дня, вже сьогодні!",
-  "footer_copywright_2": "Авторські права © {{year}} DevOpsDive"
+  "footer_copywright_2": "Авторські права © {{year}} DevOpsDive",
+  "all": "Всі",
+  "type_project": "Проект",
+  "type_task": "Завдання",
+  "category_cloud": "Хмарні сервіси",
+  "category_cicd": "CI/CD та контейнери",
+  "category_monitoring": "Моніторинг та логування",
+  "category_iac": "Інфраструктура як код",
+  "category_security": "Безпека",
+  "category_automation": "Автоматизація",
+  "category_infrastructure": "Інфраструктура",
+  "active_filters": "Активні фільтри",
+  "clear_all": "Очистити все",
+  "showing_results": "Показано {{count}} результатів",
+  "no_results": "Проекти не знайдено",
+  "try_different_filters": "Спробуйте інші фільтри",
+  "reset_all_filters": "Скинути всі фільтри",
+  "task_kubernetes_title": "Розгортання Kubernetes",
+  "task_kubernetes_description": "Налаштував кластер Kubernetes та розгорнув мікросервіси з автоматичним масштабуванням та моніторингом.",
+  "task_aws_title": "Налаштування інфраструктури AWS",
+  "task_aws_description": "Впровадив інфраструктуру AWS використовуючи Terraform, включаючи налаштування VPC, EC2 та RDS.",
+  "task_elk_title": "Впровадження ELK Stack",
+  "task_elk_description": "Впровадив ELK stack для централізованого логування та моніторингу додатків.",
+  "task_cloud_migration_title": "Проект міграції в хмару",
+  "task_cloud_migration_description": "Виконав міграцію локальних додатків до хмарної платформи використовуючи інфраструктуру як код."
 }
+
