before add templates

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -93,5 +93,81 @@
   "task_elk_title": "ELK Stack Implementation",
   "task_elk_description": "Implemented ELK stack for centralized logging and monitoring of applications.",
   "task_cloud_migration_title": "Cloud Migration Project",
-  "task_cloud_migration_description": "Migrated on-premise applications to cloud platform using Infrastructure as Code."
+  "task_cloud_migration_description": "Migrated on-premise applications to cloud platform using Infrastructure as Code.",
+  "project_azure_infrastructure_title": "Enterprise Azure Infrastructure",
+  "project_azure_infrastructure_description": "Led development of Azure infrastructure with CI/CD implementation, resulting in 70% faster deployments. Implemented secure networking, automated deployments with GitHub Actions and Terraform for microservices architecture. Integrated comprehensive monitoring solutions.",
+  
+
+  "project_aws_lambda_title": "AWS Lambda Migration & Security",
+  "project_aws_lambda_description": "Successfully migrated 50+ AWS Lambda functions to Python 3.11. Developed and implemented test scenarios for security challenge assessment, strengthening weak points. Provided technical expertise during AWS Weeks 2024 events.",
+  
+  "project_terraform_infrastructure_title": "IT Marathon Infrastructure",
+  "project_terraform_infrastructure_description": "Architected core Terraform infrastructure as primary developer. Designed secure network architecture including Virtual Networks, Security Groups, and Private DNS. Presented infrastructure automation solutions to 500+ students at EPAM tech conference.",
+
+  "project_monitoring_solution_title": "Enterprise Monitoring System",
+  "project_monitoring_solution_description": "Implemented comprehensive monitoring solutions using Grafana and Zabbix, reducing incident response time by 60%. Managed infrastructure serving 100+ users with 99.9% system uptime. Integrated alerting and automated response systems.",
+  
+  "project_infrastructure_automation_title": "Infrastructure Automation Project",
+  "project_infrastructure_automation_description": "Implemented infrastructure automation reducing deployment time by 50%. Managed cloud and on-premise infrastructure with 99.9% uptime. Automated workflows increasing team productivity by 40%. Technologies: Ansible, Docker, Jenkins, Proxmox.",
+
+  "project_crm_system_title": "Healthcare CRM System",
+  "project_crm_system_description": "Developed specialized CRM system for pharmaceutical company, decreasing processing time by 40%. Implemented automation features and integrated with existing systems. Built with modern stack including React and Firebase.",
+  
+  "task_git_optimization_title": "Git Repository Optimization",
+  "task_git_optimization_description": "Optimized Git repository structure and workflows, significantly reducing storage costs. Implemented GitLab-Bitbucket mirroring for cross-team collaboration.",
+  
+  "task_backup_solution_title": "Cloud Backup Solution",
+  "task_backup_solution_description": "Developed backup solution for Commercetools data using Azure Logic Apps. Implemented automated backup verification and recovery testing procedures.",
+  
+  "task_kubernetes_setup_title": "Kubernetes Infrastructure Setup",
+  "task_kubernetes_setup_description": "Optimized Kubernetes ingress whitelisting and cluster configuration. Implemented microservices architecture with automated scaling and monitoring.",
+
+  "project_bosch_cicd_title": "Enterprise E-Commerce CI/CD Pipeline",
+  "project_bosch_cicd_description": "Architected and implemented comprehensive CI/CD pipeline for Bosch's e-commerce platform using Jenkins and Azure DevOps. Integrated with Commercetools, implemented automated testing, and established deployment strategies for microservices architecture. Achieved 70% faster deployment times and 99.9% deployment success rate.",
+
+  "project_gcp_kubernetes_title": "GCP Kubernetes Infrastructure",
+  "project_gcp_kubernetes_description": "Designed and implemented production-grade Kubernetes infrastructure on Google Cloud Platform. Set up GKE clusters with autoscaling, implemented pod security policies, and configured Cloud Load Balancing. Integrated with Cloud Monitoring and Cloud Logging for comprehensive observability.",
+
+  "project_multicloud_security_title": "Multi-Cloud Security Framework",
+  "project_multicloud_security_description": "Developed comprehensive security framework across GCP, AWS, and Azure. Implemented IAM policies, security groups, and network policies. Created automated security compliance checks and remediation procedures. Achieved zero security incidents post-implementation.",
+
+  "project_terraform_automation_title": "Infrastructure as Code Platform",
+  "project_terraform_automation_description": "Built enterprise-grade Infrastructure as Code platform using Terraform for multi-cloud deployments. Implemented modular design for reusable components, automated state management, and integrated with CI/CD pipelines. Reduced infrastructure deployment time by 80%.",
+
+  "project_monitoring_platform_title": "Enterprise Monitoring Solution",
+  "project_monitoring_platform_description": "Implemented comprehensive monitoring platform using Grafana, Prometheus, and custom exporters. Set up alerting, dashboards, and automated incident response. Reduced MTTR by 60% and improved system availability to 99.99%.",
+
+  "task_lambda_migration_title": "AWS Lambda Python Migration",
+  "task_lambda_migration_description": "Successfully migrated 50+ AWS Lambda functions from Python 3.8 to 3.11. Implemented automated testing framework and deployment pipeline, ensuring zero downtime during migration.",
+
+  "task_terraform_azure_title": "Azure Infrastructure Automation",
+  "task_terraform_azure_description": "Automated Azure infrastructure deployment using Terraform, including Virtual Networks, Private DNS, and Security Groups. Implemented modular design pattern for reusable components.",
+
+  "task_microservices_deployment_title": "Microservices Platform Setup",
+  "task_microservices_deployment_description": "Implemented microservices architecture using MACH principles (Microservices, API-first, Cloud-native, Headless). Set up service mesh, configured API gateway, and implemented automated scaling policies.",
+
+    "project_commercetools_backup_title": "Commercetools Data Backup Solution",
+    "project_commercetools_backup_description": "Developed automated backup solution for Commercetools platform using Azure Logic Apps. Implemented scheduled backups of critical business data, validation checks, and automated recovery procedures. Achieved 99.99% backup success rate and reduced data recovery time by 75%.",
+  
+    "project_git_optimization_title": "Git Infrastructure Optimization",
+    "project_git_optimization_description": "Optimized Git repository structure and implemented efficient branching strategies, reducing storage costs and improving CI/CD performance. Set up GitLab-Bitbucket mirroring for cross-team collaboration. Achieved 40% reduction in repository size and 50% faster build times.",
+  
+    "project_mach_deployment_title": "MACH Composer Automation Platform",
+    "project_mach_deployment_description": "Implemented automated microservices deployment using MACH Composer and GitHub Actions. Created reusable workflows for Commercetools services deployment, configured environment-specific deployments, and implemented automated testing. Reduced deployment time by 65% and eliminated manual configuration errors.",
+  
+    "task_backup_monitoring_title": "Backup Monitoring System",
+    "task_backup_monitoring_description": "Developed comprehensive monitoring system for backup processes using Azure Monitor and Logic Apps. Implemented automated alerts and recovery procedures for failed backups.",
+  
+    "task_git_workflow_title": "Git Workflow Automation",
+    "task_git_workflow_description": "Created automated Git workflows for branch management, code review, and deployment processes. Implemented pre-commit hooks and automated quality checks.",
+  
+    "task_mach_testing_title": "MACH Integration Testing",
+    "task_mach_testing_description": "Developed automated testing framework for MACH-based microservices. Implemented integration tests and performance monitoring for API endpoints.",
+
+    "project_git_mirror_title": "Cross-Platform Git Synchronization Solution",
+  "project_git_mirror_description": "Implemented robust synchronization system between BitBucket and GitLab repositories, enabling seamless collaboration between multiple development teams with different platform preferences. Solved access management challenges through automated mirroring, ensuring real-time code synchronization while maintaining security policies. Resulted in 100% code consistency across platforms and eliminated access management overhead.",
+
+  "task_mirror_monitoring_title": "Repository Sync Monitoring",
+  "task_mirror_monitoring_description": "Developed monitoring system for repository synchronization status with automated alerts and recovery procedures for sync failures. Implemented metrics collection for sync performance and drift detection."
+
 }
